--- a/application-docker.yml
+++ b/application-docker.yml
@@ -18,7 +18,7 @@ spring:
         format_sql: true
   
   liquibase:
-    enabled: false  # Отключаем Liquibase на время теста
+    enabled: true
 
 server:
   port: ${SERVER_PORT:8080}
