--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres123}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 server.port=${SERVER_PORT:8080}
+spring.profiles.active=@activatedProperties@
+spring.application.name=wallet-service
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
