--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,31 +1,34 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/walletdb
-    username: postgres
-    password: postgres123
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
-      connection-timeout: 30000
+      maximum-pool-size: ${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE:20}
+      minimum-idle: ${SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE:10}
+      connection-timeout: ${SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT:30000}
 
   jpa:
     hibernate:
-      ddl-auto: validate  # Измените с create-drop на validate
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
 
   liquibase:
-    enabled: true
-    # Используем путь, который работает внутри JAR
-    change-log: classpath:/db/changelog/db.changelog-master.yaml
+    enabled: ${SPRING_LIQUIBASE_ENABLED:true}
+    change-log: ${SPRING_LIQUIBASE_CHANGE_LOG:classpath:/db/changelog/db.changelog-master.yaml}
+    default-schema: ${SPRING_LIQUIBASE_DEFAULT_SCHEMA:public}
 
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
+  tomcat:
+    max-threads: ${SERVER_TOMCAT_MAX_THREADS:200}
+    min-spare-threads: ${SERVER_TOMCAT_MIN_SPARE_THREADS:20}
 
 logging:
   level:
-    com.wallet: DEBUG
-    org.springframework: INFO
-    org.hibernate.SQL: DEBUG
+    com.example.wallet: ${LOGGING_LEVEL_COM_EXAMPLE_WALLET:DEBUG}
+    org.springframework: ${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK:INFO}
+    org.hibernate.SQL: ${LOGGING_LEVEL_ORG_HIBERNATE_SQL:WARN}
